--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/index.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/index.html
@@ -398,7 +398,9 @@
 <hr /><hr />
 <div id="footer">
 <div id="contact">
+
 <h2><img alt="ページ作成者とお問い合わせ先" src="/img/contact_title.gif" /></h2>
+
 <dl>
 <dt>
     神戸市 保健福祉局 高齢福祉部 介護保険課</dt>
@@ -408,7 +410,7 @@
   <br />
   電話：078-322-6228  Fax：078-322-6049
   <span class="contactLink" id="contactLink">
-    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQ%2FcFgtcGlLcE5ncCdUcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHkzcEhucFF1cVc1cCZ3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWc%3D&lang=ja&ssi_code=K1015400350000-0000&title=">このページの内容についてメールで問い合わせする</a></span>
+    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQncFhScEdLcE4icClUcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHkzcEhucF91cVdUcCp3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWc%3D&lang=ja&ssi_code=K1015400350000-0000&title=">このページの内容についてメールで問い合わせする</a></span>
 <script type="text/javascript">
 var elContainer = document.getElementById("contactLink"); 
  while(elContainer.firstChild) { 
@@ -416,7 +418,7 @@ var elContainer = document.getElementById("contactLink");
  } 
 text = document.createTextNode('このページの内容についてメールで問い合わせする'); 
 elA = document.createElement('a'); 
-elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQ%2FcFgtcGlLcE5ncCdUcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHkzcEhucFF1cVc1cCZ3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWc%3D&lang=ja&ssi_code=K1015400350000-0000&title=' + document.title; 
+elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQncFhScEdLcE4icClUcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHkzcEhucF91cVdUcCp3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWc%3D&lang=ja&ssi_code=K1015400350000-0000&title=' + document.title; 
 elA.appendChild(text); 
 document.getElementById('contactLink').appendChild(elA); 
 </script>
@@ -432,11 +434,12 @@ document.getElementById('contactLink').appendChild(elA);
   <li><a href="/sitemap.html">サイトマップ</a></li>
   <li><a href="/other/arukikata/index.html">神戸市ホームページのご利用案内</a></li>
   <li><a href="/other/p_policy.html">プライバシーポリシー</a></li>
+  <li><a href="/information/about/building/index.html">神戸市役所本庁舎のご案内</a></li>
 </ul>
 <div id="copyright">Copyright <abbr title="Copyright">&copy;</abbr> City of Kobe. All rights reserved.</div>
 
 </div><!-- /footer -->
-<!-- Created: 2014/07/26 14:14:02.377 GMT+9 -->
+<!-- Created: 2016/12/19 16:11:00.354 GMT+9 -->
 
 </div><!-- /wrapper -->
 </body>
