--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/ryoyobyosho.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/ryoyobyosho.html
@@ -303,7 +303,9 @@
 <hr /><hr />
 <div id="footer">
 <div id="contact">
+
 <h2><img alt="ページ作成者とお問い合わせ先" src="/img/contact_title.gif" /></h2>
+
 <dl>
 <dt>
     神戸市 保健福祉局 高齢福祉部 介護指導課 指定係</dt>
@@ -313,7 +315,7 @@
   <br />
   電話：078-322-6771  Fax：078-322-6762
   <span class="contactLink" id="contactLink">
-    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRzcEpgcF5ScFBNcERYcEhwXHBRcFJwTXBYcF5wKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHlwcEg%2FcFV1cVc0cDt3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhwd3BgcHxxIHBycWdvZnB3cGBwe3F0cHVwQA%3D%3D&lang=ja&ssi_code=K1015400395000-0000&title=">このページの内容についてメールで問い合わせする</a></span>
+    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQ2cEptcEBScFAncEpYcEhwXHBRcFJwTXBYcF5wKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHk2cEhtcEB1cVcncEp3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhwd3BgcHxxIHBycWdvZnB3cGBwe3F0cHVwQA%3D%3D&lang=ja&ssi_code=K1015400395000-0000&title=">このページの内容についてメールで問い合わせする</a></span>
 <script type="text/javascript">
 var elContainer = document.getElementById("contactLink"); 
  while(elContainer.firstChild) { 
@@ -321,7 +323,7 @@ var elContainer = document.getElementById("contactLink");
  } 
 text = document.createTextNode('このページの内容についてメールで問い合わせする'); 
 elA = document.createElement('a'); 
-elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRzcEpgcF5ScFBNcERYcEhwXHBRcFJwTXBYcF5wKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHlwcEg%2FcFV1cVc0cDt3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhwd3BgcHxxIHBycWdvZnB3cGBwe3F0cHVwQA%3D%3D&lang=ja&ssi_code=K1015400395000-0000&title=' + document.title; 
+elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQ2cEptcEBScFAncEpYcEhwXHBRcFJwTXBYcF5wKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHk2cEhtcEB1cVcncEp3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhwd3BgcHxxIHBycWdvZnB3cGBwe3F0cHVwQA%3D%3D&lang=ja&ssi_code=K1015400395000-0000&title=' + document.title; 
 elA.appendChild(text); 
 document.getElementById('contactLink').appendChild(elA); 
 </script>
@@ -337,11 +339,12 @@ document.getElementById('contactLink').appendChild(elA);
   <li><a href="/sitemap.html">サイトマップ</a></li>
   <li><a href="/other/arukikata/index.html">神戸市ホームページのご利用案内</a></li>
   <li><a href="/other/p_policy.html">プライバシーポリシー</a></li>
+  <li><a href="/information/about/building/index.html">神戸市役所本庁舎のご案内</a></li>
 </ul>
 <div id="copyright">Copyright <abbr title="Copyright">&copy;</abbr> City of Kobe. All rights reserved.</div>
 
 </div><!-- /footer -->
-<!-- Created: 2014/10/07 19:48:53.220 GMT+9 -->
+<!-- Created: 2016/12/19 16:13:25.904 GMT+9 -->
 
 </div><!-- /wrapper -->
 </body>
